# mvp-game

./: Cargo.toml  README.md  build-all.sh
src/: main.rs  ref_mutex.rs  smugglers_mutex.rs
wasm-components/: Cargo.toml
wasm-components/test-startup-mod/: Cargo.toml
wasm-components/test-startup-mod/src/: lib.rs
wit/: world.wit
