[package]
name = "mvp"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/jeffparsons/mvp-game"

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
bevy = "0.12"
wasmtime = { version = "16", features = ["component-model"] }
wasmtime-wasi = { version = "16", features = [] }

[profile.dev]
# Enable a small amount of optimization in debug mode.
opt-level = 1

[profile.dev.package."*"]
# Enable high optimizations for dependencies (incl. Bevy), but not for our code.
opt-level = 3
